[package]
name = "pistones"
version = "0.2.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/RustLangES/pistones"
homepage = "https://github.com/RustLangES/pistones"
description = "An wrapper for the Piston code execution engine."
categories = ["api-bindings", "asynchronous"]
keywords = ["piston-rs", "piston", "emkc", "code", "run"]
include = ["src/**/*.rs", "Cargo.toml", "rust-toolchain.toml", "examples/*.rs"]

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
